== 0.5.2
  * Bug Fixes
    * Fixing Ruby 1.9 issue that requires to_s on the err object [github.com/Chrononaut]
    * Fixes for pagination and ordering posts on the same day [github.com/ujh]

== 0.5.1 / 2009-05-06
  * Major Enhancements
    * Next/previous posts in site payload [github.com/pantulis, github.com/tomo]
    * Permalink templating system
    * Moved most of the README out to the GitHub wiki
    * Exclude option in configuration so specified files won't be brought over with generated site [github.com/duritong]
  * Bug Fixes
    * Making sure config.yaml references are all gone, using only config.yml
    * Fixed syntax highlighting breaking for UTF-8 code [github.com/henrik]
    * Worked around RDiscount bug that prevents Markdown from getting parsed after highlight [github.com/henrik]
    * CGI escaped post titles [github.com/Chrononaut]

== 0.5.0 / 2009-04-07
  * Minor Enhancements
    * Ability to set post categories via YAML [github.com/qrush]
    * Ability to set prevent a post from publishing via YAML [github.com/qrush]
    * Add textilize filter [github.com/willcodeforfoo]
    * Add 'pretty' permalink style for wordpress-like urls [github.com/dysinger]
    * Made it possible to enter categories from YAML as an array [github.com/Chrononaut]
    * Ignore Emacs autosave files [github.com/Chrononaut]
  * Bug Fixes
    * Use block syntax of popen4 to ensure that subprocesses are properly disposed [github.com/jqr]
    * Close open4 streams to prevent zombies [github.com/rtomayko]
    * Only query required fields from the WP Database [github.com/ariejan]
    * Prevent _posts from being copied to the destination directory [github.com/bdimcheff]
  * Refactors
    * Factored the filtering code into a method [github.com/Chrononaut]
    * Fix tests and convert to Shoulda [github.com/qrush, github.com/technicalpickles]
    * Add Cucumber acceptance test suite [github.com/qrush, github.com/technicalpickles]

== 0.4.1
  * Minor Enhancements